--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+aiofiles==0.7.0
 aiosql==3.2.0
 asyncpg==0.23.0
 fastapi==0.65.2
 geojson==2.5.0
 loguru==0.5.3
 numpy==1.20.3
+PyJWT==2.1.0
 psycopg2==2.9.1
+python-multipart==0.0.5
 uvicorn==0.14.0
