--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ geojson==2.5.0
 Jinja2==2.11.3
 loguru==0.5.3
 numpy==1.20.3
-PyJWT==2.1.0
 psycopg2==2.9.1
+PyJWT==2.1.0
+pytest==6.2.4
 python-multipart==0.0.5
+requests==2.25.1
 uvicorn==0.14.0
