--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy==1.20.3
 psycopg2==2.9.1
 PyJWT==2.1.0
 pytest==6.2.4
+pytest-cov==2.12.1
 python-multipart==0.0.5
 requests==2.25.1
 uvicorn==0.14.0
