--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,12 @@ jobs:
     - name: Install libraries
       run: pip install -r requirements.txt
     - name: Test
-      run: pytest --verbose --color=yes --cov=app
+      run: pytest --verbose --color=yes --cov=app --cov-report=xml
     - name: Upload to Codecov
       uses: codecov/codecov-action@v1
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.xml
         fail_ci_if_error: true
+        verbose: true
+        
