update gitignore and data

--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,13 @@
 .DS_Store
 .vscode
 __pycache__
-credentials_*.json
-data/**
-!data/*.json
-*.pem
-api.sh
-psql.sh
 .env
 .vscode
 .pytest_cache
-*.ipynb
+*.pem
 .coverage
 coverage.xml
+
+*.ipynb
+data/in/**
 nsw_neighborhood.json
