--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,5 +55,5 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage.xml
         fail_ci_if_error: true
-        # verbose: true
+        verbose: true
         
