Github Workflow: Trigger deployment only if branch is main and pass tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 # Build and push container image to AWS ECR, and deploy service with updated task definition
 name: Deploy
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
+  repository_dispatch:
+    types: [trigger-deployment]
 jobs:
   Build-Push-Deploy-Workflow:
     runs-on: ubuntu-latest
