--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
         fail_ci_if_error: true
         verbose: true
     - name: Trigger Deployment if Test on Main successfully
-      if: success() && github.ref == 'main'
+      if: success() && github.ref == 'refs/heads/main'
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.REPO_GHA_PAT }}
