fix testing, update readme and gitignore

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,14 +48,13 @@ jobs:
         ogr2ogr -f "PostgreSQL" PG:"host=${{ env.DB_HOST }} port=${{ env.DB_PORT }} dbname=${{ env.DB_NAME }} user=${{ env.DB_USERNAME }} password=${{ env.DB_PASSWORD }}" "data/out/nsw_poi.json" -nln nsw_poi -nlt POLYGON
         ogr2ogr -f "PostgreSQL" PG:"host=${{ env.DB_HOST }} port=${{ env.DB_PORT }} dbname=${{ env.DB_NAME }} user=${{ env.DB_USERNAME }} password=${{ env.DB_PASSWORD }}" "data/out/nsw_neighborhood_sample.json" -nln nsw_neighborhood -nlt POLYGON
     - name: Test
-      run: pytest --verbose --color=yes --cov=app --cov-report=xml
+      run: pytest -s --verbose --color=yes --showlocals -r p --cov=app --cov-report=xml
     - name: Upload to Codecov
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage.xml
         fail_ci_if_error: true
-        # verbose: true
     - name: Trigger Deployment if Test on Main successfully
       if: success() && github.ref == 'main'
       uses: peter-evans/repository-dispatch@v1
